Refactor CodeSmells by SonarLint